<resources>
    <string name="app_name">MusicTools</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">花落无声</string>
    <string name="nav_header_subtitle" translatable="false">brangpd@outlook.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_midi_keyboard">Midi Keyboard</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <string name="menu_metronome">Metronome</string>
    <string name="metronome_bpm_text" translatable="false">BPM</string>
    <string name="metronome_play">Play</string>
    <string name="metronome_record">Record</string>
    <string name="metronome_reset_record">Reset Record</string>
    <string name="metronome_stop">Stop</string>
    <string name="text_view_key_width_text">Key Width:</string>
    <string name="text_view_transposition_text">Trans:</string>
    <string name="button_midi_key_transposition_plus" translatable="false">+</string>
    <string name="button_midi_key_transposition_minus" translatable="false">-</string>
    <string name="button_midi_key_transposition_zero" translatable="false">0</string>
    <string name="midi_program_0">Piano</string>
    <string name="midi_program_24">Guitar</string>
    <string name="text_view_midi_program">Inst:</string>
    <string name="metronome_choose_preset">Preset</string>
    <string name="speed_larghissimo">Larghissimo</string>
    <string name="speed_largo" >Largo</string>
    <string name="speed_grave" >Grave</string>
    <string name="speed_adagio" >Adagio</string>
    <string name="speed_adagietto" >Adagietto</string>
    <string name="speed_larghetto" >Larghetto</string>
    <string name="speed_andante" >Andante</string>
    <string name="speed_adagissimo" >Adagissimo</string>
    <string name="speed_lento" >Lento</string>
    <string name="speed_andantino" >Andantino</string>
    <string name="speed_marcia_moderato" >Marcia Moderato</string>
    <string name="speed_moderato" >Moderato</string>
    <string name="speed_andante_moderato" >Andante Moderato</string>
    <string name="speed_allegretto" >Allegretto</string>
    <string name="speed_allegro_moderato" >Allegro Moderato</string>
    <string name="speed_allegro" >Allegro</string>
    <string name="speed_vivace" >Vivace</string>
    <string name="speed_vivacissimo" >Vivacissimo</string>
    <string name="speed_allegrissimo" >Allegrissimo</string>
    <string name="speed_presto" >Presto</string>
    <string name="speed_prestissimo" >Prestissimo</string>
</resources>