<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="io.brangpd.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_metronome"
        android:name="io.brangpd.ui.metronome.MetronomeFragment"
        android:label="@string/menu_metronome"
        tools:layout="@layout/metronome_fragment" />
    <fragment
        android:id="@+id/nav_midi_keyboard"
        android:name="io.brangpd.ui.midipiano.MidiPianoFragment"
        android:label="@string/menu_midi_keyboard"
        tools:layout="@layout/midi_piano_fragment" />
</navigation>