<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_view_key_width_text" />

        <Spinner
            android:id="@+id/spinnerMidiKeySize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/midiKeySize"
            android:minHeight="48dp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_view_transposition_text" />

        <Spinner
            android:id="@+id/spinnerMidiKeyTransposition"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/buttonMidiKeyTranspositionZero"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="@string/button_midi_key_transposition_zero"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/buttonMidiKeyTranspositionMinus"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="@string/button_midi_key_transposition_minus"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/buttonMidiKeyTranspositionPlus"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="@string/button_midi_key_transposition_plus"
            tools:ignore="TouchTargetSizeCheck" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</TableLayout>