<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.metronome.MetronomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin">

        <EditText
            android:id="@+id/editTextNumberBpm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:minHeight="48dp"
            android:textAlignment="center"
            tools:ignore="SpeakableTextPresentCheck" />

        <SeekBar
            android:id="@+id/seekBarBpm"
            style="@style/Widget.AppCompat.SeekBar"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:max="300"
            android:progress="0" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonPlay"
                android:layout_width="@dimen/metronome_button_width"
                android:layout_height="wrap_content"
                android:text="@string/metronome_play"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/buttonRecord"
                android:layout_width="@dimen/metronome_button_width"
                android:layout_height="wrap_content"
                android:text="@string/metronome_record"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonPlay" />

            <Button
                android:id="@+id/buttonResetRecord"
                android:layout_width="@dimen/metronome_button_width"
                android:layout_height="wrap_content"
                android:text="@string/metronome_reset_record"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonRecord" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</FrameLayout>